fixed line break in notes

--- a/private/web/styles/index.less
+++ b/private/web/styles/index.less
@@ -133,7 +133,7 @@ pre:empty {
     margin-bottom: 5px;
 
     small {
-      white-space: pre;
+      white-space: pre-line;
     }
   }
 }
